@@ -16,7 +16,7 @@
   \describe{
     \item{\code{relfac}:}{A list of relationship matrix factors.  All
       other slots are inherited from class \code{"\link[lme4:merMod-class]{merMod}"}.}
-    \item{\code{udd}:}{A list of eigen decomposition elements.  All
+    \item{\code{udu}:}{A list of eigen decomposition elements.  All
       other slots are inherited from class \code{"\link[lme4:merMod-class]{merMod}"}.}
   }
 }
